# optparse-simple

./: .gitignore  .travis.yml  ChangeLog.md  README.md  optparse-simple.cabal  package.yaml  stack.yaml
example/: Simple.hs
src/Options/Applicative/: Simple.hs
test/: Main.hs
