name:                optparse-simple
version:             0.0.1
synopsis:            Simple interface to optparse-applicative
description:         Simple interface to optparse-applicative
license:             BSD3
license-file:        LICENSE
author:              FP Complete
maintainer:          chrisdone@fpcomplete.com
copyright:           2015 FP Complete
category:            Options
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Options.Applicative.Simple
  build-depends:     base >= 4 && <5
                   , template-haskell
                   , transformers
                   , optparse-applicative
                   , gitrev
                   , either
