name:                optparse-simple
version:             0.0.4
synopsis:            Simple interface to optparse-applicative
description:         Simple interface to optparse-applicative
license:             BSD3
license-file:        LICENSE
author:              FP Complete
maintainer:          chrisdone@fpcomplete.com
copyright:           2015 FP Complete
category:            Options
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md ChangeLog.md

library
  hs-source-dirs:    src/
  ghc-options:       -Wall
  exposed-modules:   Options.Applicative.Simple
  build-depends:     base >= 4 && <5
                   , template-haskell
                   , transformers
                   , optparse-applicative
                   , gitrev
                   , either

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:
                     base -any
                   , optparse-simple
                   , directory -any
                   , bytestring -any
  hs-source-dirs:    test
  ghc-options:       -Wall

source-repository head
  type:              git
  location:          https://github.com/fpco/optparse-simple
